--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -285,7 +285,7 @@ Within the objective of adding or altering  game design patterns , implementing 
 
 <!-- Contradictions concerned with use of core tools and additional documentation and support are explored in two later sections of this chapter. -->
 
-The later section of the vignette shows evidence of elements of an emerging idioculture of this group.
+The later section of the vignette shows evidence of elements of an emerging idioculture of this group, an aspect which is not described here but which is taken back up in chapter 7 as part of the emergent apsects of the learning design and their relation with participant agency. 
 BUT NOT DESCRIBED HERE? SIGNPOST?
 
 <!-- MOVE THIS TO CHAPTER 7 -
@@ -305,11 +305,6 @@ Objectives at this level also vary between participants with some more straight-
 <!-- MOVE OR EXPLAIN IN MORE DETAIL
 ALTER THE DIAGRAMS ABOVE TO REFLECT THIS. -->
 
-<!-- After inserting the code which adds a moving enemy to the game, Toby spends five minutes altering the variables involved to match his design and to create a level of challenge that he is happy with. -->
-
-<!-- Toby makes quick progress. one factor here is willingness to make mistakes. There is a confidence here in undoing mistakes, commenting out new code to return to previous behaviour.
-
-The trial and error approach also yields benefits, a mistake in the values edited creates an unexpected result of the enemy moving vertically instead of horizontallWithin the objective of adding or altering game features (also referred to as game design patterns here), implementing more complicated patterns involved several stages and varied tools. Using the terminology of Leontiev [-@leontiev_activity_2009], participants undertakes certain chains of processes in a fluid way that shows that actions had become operations (as explored in chapter three). In vignette 4.x, an example of such an operation is Toby's quick navigation between different areas of the game code, the game preview window and other sources of documentation. In contrast, some tasks are new to Toby and are performed more hesitantly. In the vignette's description, it can be observed that at times Toby is careful and hesitant, checking and rechecking the process of copying and pasting new code into his game from the code example of a design pattern he has chosen.y. Toby embraces this mistake and shares his account of this happy accident enthusiastically. -->
 
 
 <!-- In the last chapter, we examined the use of Rogoff's 3 lenses of cultural, social and personal activity. We can see a broad alignment of these lenses and the scopes of the activity systems above.
@@ -451,8 +446,6 @@ Code playgrounds, as described in chapter two, are an online environment used to
 
 #### Starting template
 
-
-
 The initial use of a working structural template was based on my previous experience of teaching javascript to novices [@chesterman_webmaking_2015].
 
 This template was synthesised from several tutorial to create a game of the _platformer_ genre  (see glossary), a move which helped to limit expectations of the technical complexity of their game.
@@ -468,8 +461,6 @@ In their research Kynigos and colleagues [-@kynigos_children_2018] explore this 
 
 
 <!-- The following section outlines responsive design process surrounding two main elements: the starting game code template and the code authoring toolset. -->
-
-
 
 
 
@@ -644,21 +635,7 @@ As they had been guided to make a game on a broadly environmental theme, partici
 
 ![](./Pictures/whale_1.png){width=50%} -->
 
-<!-- #### Creating a simplified and clear project structure
 
-The following illustration from the step-based instructions illustrates the structure for participants.
-
-![](./Pictures/overview_of_structure_cropped.png){width=95%}
-
-4.x - Structure explained in Manual for P2 and P3
-
-In P1, I found that as I worked with the learners to respond to their requests to add in new elements to the game, I was able to to reference different parts of the template and thus build their familiarity with the code.
-
-At one stage I did a test of that process by printing out different elements of the template and asking them to complete them roughly in order as a jigsaw activity. The participants expressed surprise at how much familiarity they had built up with the code.
-INSERT QUOTE FROM SU AND TOBY
-
-Despite building familiarity with code, at this stage event simple game changes or adding new elements still required significant support.
- -->
 
 
 <!-- ADD THIS FUNCTIONALITY OF ASSET AREA TO DESCRIPTIO OF CODE PLAYGROUND
@@ -2069,7 +2046,7 @@ Following Barab's description of nested activity systems [-@barab_using_2002], t
 This prioritisation in AT is sometimes conceptualised as the process of finding a key units of analysis. In the process of research I have found two units of activity particularly illuminating, one being the shared activity system described above of making a game in a community process. The other, narrower in scope can be described as implementing individual game features. Beyond these key systems, I draw on the concepts of actions and operations within systems to describe tensions and contradictions which emerge in the research process [-@leontiev_activity_2009].
 
 
-###oBSERVATIONS ON THE PARTICIPANT BEHAVIOUR AND DESIGN
+### oBSERVATIONS ON THE PARTICIPANT BEHAVIOUR AND DESIGN
 
 <!-- While some game patterns were simple to add, e.g. altering the location of platforms, other more complicated features involved several stages and varied tools to implement. The next section describes these stages as discrete code and design structures. -->
 
@@ -2080,3 +2057,28 @@ This prioritisation in AT is sometimes conceptualised as the process of finding 
 <!-- For example, creating a new graphical element in a separate online pixel-art editor called Piskel, exporting and downloading it to the laptop, and uploading it to the glitch code playground and then making code changes in several parts of the code to initialise and implement new behaviour for this element. -->
 
 <!--NOTE As a facilitator of a community I aim to notice these transitions as I aim to use the proficiency of participants to help distribute the process of helping peers. -->
+
+
+#### Creating a simplified and clear project structure
+
+The following illustration from the step-based instructions illustrates the structure for participants.
+
+![](./Pictures/overview_of_structure_cropped.png){width=95%}
+
+4.x - Structure explained in Manual for P2 and P3
+
+In P1, I found that as I worked with the learners to respond to their requests to add in new elements to the game, I was able to to reference different parts of the template and thus build their familiarity with the code.
+
+At one stage I did a test of that process by printing out different elements of the template and asking them to complete them roughly in order as a jigsaw activity. The participants expressed surprise at how much familiarity they had built up with the code.
+INSERT QUOTE FROM SU AND TOBY
+
+Despite building familiarity with code, at this stage event simple game changes or adding new elements still required significant support.
+
+### Toby's vignette move there
+
+
+After inserting the code which adds a moving enemy to the game, Toby spends five minutes altering the variables involved to match his design and to create a level of challenge that he is happy with.
+
+Toby makes quick progress. one factor here is willingness to make mistakes. There is a confidence here in undoing mistakes, commenting out new code to return to previous behaviour.
+
+The trial and error approach also yields benefits, a mistake in the values edited creates an unexpected result of the enemy moving vertically instead of horizontallWithin the objective of adding or altering game features (also referred to as game design patterns here), implementing more complicated patterns involved several stages and varied tools. Using the terminology of Leontiev [-@leontiev_activity_2009], participants undertakes certain chains of processes in a fluid way that shows that actions had become operations (as explored in chapter three). In vignette 4.x, an example of such an operation is Toby's quick navigation between different areas of the game code, the game preview window and other sources of documentation. In contrast, some tasks are new to Toby and are performed more hesitantly. In the vignette's description, it can be observed that at times Toby is careful and hesitant, checking and rechecking the process of copying and pasting new code into his game from the code example of a design pattern he has chosen.y. Toby embraces this mistake and shares his account of this happy accident enthusiastically.
