--- a/_posts/thesis_chapters/tocs/2024-10-5-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-10-5-Design.md_toc.md
@@ -12,12 +12,6 @@
             experience](#activity-system-1---an-emerging-community-of-novice-game-makers-community-making-games-as-a-learning-experience)
         -   [Activity system 2 - Constructing a game feature by
             feature](#activity-system-2---constructing-a-game-feature-by-feature)
-            -   [Illustrative use of tools to mediate activity shown in
-                vignette
-                4.x](#illustrative-use-of-tools-to-mediate-activity-shown-in-vignette-4.x)
-            -   [Operations and actions within the system - Implementing
-                discrete code and design
-                structures](#operations-and-actions-within-the-system---implementing-discrete-code-and-design-structures)
             -   [LINK - Applying activity theory to surface
                 contradictions and design tensions experienced by
                 participants and
@@ -39,17 +33,6 @@
             -   [Use of game assets](#use-of-game-assets)
             -   [Distributed approach to asset
                 creation](#distributed-approach-to-asset-creation)
-        -   [Observations and discussion on the game template and core
-            tools](#observations-and-discussion-on-the-game-template-and-core-tools)
-            -   [Developing Digital Literacy
-                skills](#developing-digital-literacy-skills)
-            -   [INTEGRAETE ABOVE Tension of a group remixing from one
-                template rather than feeler community inspiration and
-                interaction](#integraete-above-tension-of-a-group-remixing-from-one-template-rather-than-feeler-community-inspiration-and-interaction)
-            -   [Concluding bit](#concluding-bit)
-    -   [C2 - Participant conflict associated with project navigation
-        and use of
-        documentation](#c2---participant-conflict-associated-with-project-navigation-and-use-of-documentation)
         -   [Narrative on the evolution of resources during
             P2](#narrative-on-the-evolution-of-resources-during-p2)
         -   [Quick Start Cards](#quick-start-cards)
@@ -62,44 +45,50 @@
         the game making
         activity](#c3---responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
         -   [Social coding processes](#social-coding-processes)
-        -   [Playtesting as a cultural
-            process](#playtesting-as-a-cultural-process)
-            -   [Local playtesting rather than participation with a
-                wider online
-                community](#local-playtesting-rather-than-participation-with-a-wider-online-community)
             -   [Playtesting and the interaction with UMC pedagogy and
                 half-baked games
                 approaches](#playtesting-and-the-interaction-with-umc-pedagogy-and-half-baked-games-approaches)
-            -   [Playtesting facilitating peer
-                encouragement](#playtesting-facilitating-peer-encouragement)
-            -   [Playtesting and embodied participation in the games of
-                others](#playtesting-and-embodied-participation-in-the-games-of-others)
-            -   [Community concepts and norming behaviour emerging
-                during
-                playtesting](#community-concepts-and-norming-behaviour-emerging-during-playtesting)
             -   [What kind of Maker are you - Motivations behind social
                 processes (emerging in
                 playtesting)](#what-kind-of-maker-are-you---motivations-behind-social-processes-emerging-in-playtesting)
             -   [Use of side missions to encourage varied creative
                 practices](#use-of-side-missions-to-encourage-varied-creative-practices)
+        -   [Observations and discussion on the game template and core
+            tools](#observations-and-discussion-on-the-game-template-and-core-tools)
+            -   [Developing Digital Literacy skills /
+                Fluency](#developing-digital-literacy-skills-fluency)
+            -   [Concluding bit](#concluding-bit)
         -   [Outroduction to this part of exploring Drama process and
             playtesting](#outroduction-to-this-part-of-exploring-drama-process-and-playtesting)
     -   [Chapter Discussion](#chapter-discussion)
-        -   [Observations / Discussions on Dimensions of
-            Authenticity](#observations-discussions-on-dimensions-of-authenticity)
+        -   [Observations and discussion on the game template and core
+            tools](#observations-and-discussion-on-the-game-template-and-core-tools-1)
+            -   [Developing Digital Literacy
+                skills](#developing-digital-literacy-skills)
+            -   [INTEGRAETE ABOVE Tension of a group remixing from one
+                template rather than feeler community inspiration and
+                interaction](#integraete-above-tension-of-a-group-remixing-from-one-template-rather-than-feeler-community-inspiration-and-interaction)
+            -   [Concluding bit](#concluding-bit-1)
+        -   [Observations / Discussions on Dimensions of Authenticity -
+            MOVE](#observations-discussions-on-dimensions-of-authenticity---move)
             -   [The potentially awesome impact of lifting the lid on
                 authentic
                 technologies](#the-potentially-awesome-impact-of-lifting-the-lid-on-authentic-technologies)
         -   [Discussion on scaffolding, affordences and
             agency](#discussion-on-scaffolding-affordences-and-agency)
             -   [Increased scaffolding of tools can increase
-                instrumental agency but at what
-                cost?](#increased-scaffolding-of-tools-can-increase-instrumental-agency-but-at-what-cost)
+                instrumental agency but at what cost? REDUCE THIS DOWN A
+                LOT - OR
+                DROP](#increased-scaffolding-of-tools-can-increase-instrumental-agency-but-at-what-cost-reduce-this-down-a-lot---or-drop)
             -   [Returning to discussion the emergent and mutual nature
                 of the design and what it has to say about participant
                 agency](#returning-to-discussion-the-emergent-and-mutual-nature-of-the-design-and-what-it-has-to-say-about-participant-agency)
-            -   [The goal of computational fluency as a form of
-                agency](#the-goal-of-computational-fluency-as-a-form-of-agency)
+            -   [SOMETHING ABOUT The goal of computational fluency in
+                relation to the research
+                question.](#something-about-the-goal-of-computational-fluency-in-relation-to-the-research-question.)
+            -   [DBR / FI implications, Design narrative argumentative
+                grammar,
+                etc](#dbr-fi-implications-design-narrative-argumentative-grammar-etc)
         -   [Summary of barriers and tensions explored in this
             chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
             -   [Exploring tensions involving and authentic tool
@@ -107,8 +96,3 @@
         -   [Emergence of GDPs as a germ cell of
             activity](#emergence-of-gdps-as-a-germ-cell-of-activity)
         -   [Link to next chapter](#link-to-next-chapter)
-    -   [Removed notes from chapter](#removed-notes-from-chapter)
-    -   [Removed NOTES](#removed-notes)
-        -   [Use of a Code Playground](#use-of-a-code-playground)
-            -   [The 3D flying bee -
-                APPENDIX?](#the-3d-flying-bee---appendix)
