--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -679,7 +679,7 @@ https://web.archive.org/web/20180426051205/http://phaser.io/tutorials/making-you
   https://github.com/glitch-game-club/glitch-game-club/blob/master/games
  -->
 
-
+## C2 - Participant conflict associated with project navigation and use of documentation
 
 ### Narrative on the evolution of resources during P2
 
@@ -963,101 +963,7 @@ https://drive.google.com/drive/folders/1I8D_axlOUAFIGarrnzGV5mSCe2MDCDso -->
 
 <br />
 
-<!-- In the transcript above of vignette 4.1.b we see that in the end-of-session reporting back participants engage in a lively discussion about the secret missions they had been given. Encouraged by her mother Molly, Nadine shares that she has been highly engaged in a disruptive secret mission. Dan and Toby express playful frustration. Mark and Ed contribute by sharing their more subtle disruption and Richie is keen to have his _rude noise_ mission noticed and commented on. Some public missions had a noticeable impact in this session particularly in  stimulating a discussion among parents around which arcade games they played as youths. -->
-
-<!-- OTHER FACTORS
-  - result of analysis of interactions during game making,
-  - to encourage some practices - AND IDENTITIES - ANY COMMENTS ignored by solely focusing on implementing code - game maker types (mention in previous design chapter) -->
-<!-- LINK NOW TO AUTHENTICITY OF PROCESSES / TOOLS -->
- <!-- including exploring adapting Bartle player types to maker types to honour different approaches; the use of social and missions and  -->
- <!-- (NOTE PREVIOUSLY EXPLORED BY RESNICK ), and other pedagogical practices. -->
-<!-- The data in this chapter, and the majority of this thesis are drawn from stages 3 and 4. As such, the observations on starting point and subsequent emergent resources are based on that period. -->
-
-<!-- NOTE - TRY ORGANISING CHAPTER THIS WAY - IMPACT OF MY DESIGN - THEN EMERGING TOOLS / PRACTICES -->
-<!-- - What pedagogical factors are significant to support novices learning coding, particularly in game making contexts?
-- How can learners build agency in an evolving community of game makers? -
-NOTE - INPUT A SMALL AMOUNT ABOUT WHAT IS MISSING FROM THIS SECTION DUE TO PARTICULAR FOCUS
-<!--
-MOVED TO INTRO
- The previous section examined the impact of a process drama with an aim to establish and nurture community practice. It highlighted the value of introducing almost-real processes, near authentic tools and the possibility of learners developing learning identities within a drama frame.   
-This section looks in greater depth at the impact on learners of the tools and suggested design patterns of the learning design explored in the previous chapter. It then progresses to explore some of the emerging and flexible design processes and tools that evolve from the starting design. -->
-
-<!-- NOTE try to focus on agency as well? -->
-<!-- NOTE - research notes include
-- how agency can be viewed in this domain,
-- increasing persistance / determination due to ownership of game
-Gee - projected identity
-Papert & Resnick & Kafai - ownership
-Papert & Turkle - Turkle closeness to objects
- -->
-
-
-<!-- NOTE - BE CLEAR OF THE LINE GDP - -->
-
-<!-- MOVED TO CONCLUSION This section is unfortunately hindered by the logistics of the recording process which began only after this process had happened and may participants had already undertaken one phase. A separate study of a stand-alone group engaging with this starting template and cards would be welcome, and may be a legitimate follow up to this study. -->
-
-<!-- PERHAPS DUPLICATION?
-- that knowledge of game tropes can scaffold idiation process (gdps)
-- community sharing of tropes (or is this later) -->
-
-<!-- PERHAPS KEEP EACH DISCUSSION POINT HERE IN THE SECTIONS ABOVE - OR IF MORE OVERARCHING MOVE TO FINAL DISCUSSION SECTION. -->
-<!-- I used to share keyboard shortcuts as magic tricks
-- Copy paste
-- Cntl and end
-- Page down -->
-
-<!-- This section looks at the specifics of community aspects of personal expression in the data collected in this study, dealing specifically with narrative elements, and graphical and audio assets. MOVED  -->
-<!-- NOTE - CROSS OVER WITH PREVIOUS CHAPTER? PROBABLY DESIGN
-(may need to move?)
-Just create a summary here.
-
-Existing research on digital making and creative coding has emphasised the role of personal expression to incentivise the creative process [Scratch roque community]. The creation of personally meaningful object to share with a community is a foundational concept in Papert's constructionism [CITE]. While the 3M design is more limited than a Scratch media project in the potential to incorporate home interests, participants did embrace existing immediately clear possibilities offered by the certain GDPs in the 3M starting design.
--->
-
-<!-- NOTE - add into the design chapter - challenge of personal expression, incoroporating previous gaming interests and unrealistic expectations.
--->
-
-<!-- NOTE IS THE FOLLOWING ALSO FOR THE DESIGN CHAPTER?
-
-Another opportunity involved choice and design of game assets that allowed the expression of identity or a designed element - for example graphics, audio or a written message to appear at various stages of the game.
-
-The incorporation and design of game assets is taken as work on GDP for the purpose of this model.
-
-The core GDP involving game assets already exist in the starting template.
-- Objects as a reward to incentivise player exploration
-- Objects as a hazard penalising player progress
-
-The starting three assets, player, hazard and reward provide a scaffold to  guide  the choice of game possible themes.
-
-The incorporation of the graphic was relatively quick and easy change to make the game but had a significant factor in the affect towards the game. So while structured to avoid
--->
-
-<!-- Cultural interactions seem to be able to motivate and sustain other interpersonal activity which may be experienced as work.
-This is supported by other research on digital making and motivation. CITATION HERE? - or in cultural discussion?  
-
-**Tangled nature of graphics and narrative in this design**
-In the data analysed, young people -->
-
-<!-- Bring out detail from the study to this section.
- - the media literacy practices of transfer between tools - similar to other studies - see guided participation studies -->
-<!-- Tensions compared to other more walled garden approaches - see below in tensions / move to make code. -->
 ### Observations and discussion on the game template and core tools
-
-<!-- NOTE: FEEDBACK FOCUS from HCI & layer in AT terminology too.  -->
-
-
-<!-- The templated game was structured to allow changes in code which were relatively easy to perform but which resulted in potentially large changes in game behaviour, appearance and difficulty. This created a large diversity in the games created and in the making activities of participants at this stage despite the small scale of the code changes involved.   -->
-<!-- Thus while I highlighted a limited number key code elements and structures to create affordances to facilitate a quick start, the diversity of experience kept some participants extended periods of time. -->
-
-<!-- Games have been part of human–computer interaction (HCI) research since
-the first CHI conference in 1982. At that gathering, Tom Malone, then at Xerox
-PARC, presented insights from the study of computer games to motivate a set of
-design principles for “enjoyable” user interfaces (Malone, 1982).
-
-from [@bernhaupt_introduction_2015]
- -->
-
-<!-- The previous sections have outlined changes to the core tool use including the use of a starter game template which I enacted to address the struggles participants had in becoming accustomed to game making. -->
 
 **Synthesis effect of UMC + collection of GDPS**
 
@@ -1151,70 +1057,6 @@ Affordances within the domain of HCI research -->
 In summary, this chapter has explored the complexity of the interacting tools and documentation in relation to their authenticity and impact on participant experiences. While the use of authentic tools and processes, while challenging for novices, can be facilitated by careful alignment of key design principles. However, some barriers involving social and cultural factors suited interventions of other pedagogies. In later chapters I explore the interaction between authenticity and agency in more depth using the emerging pedagogies as an analytical lens.
 
 <!-- Later, chapter six  chapter explores the potential for drama processes to address learner anxiety in this domain. -->
-
-
-### Observations and discussion on the game template and core tools
-
-<!-- NOTE: FEEDBACK FOCUS from HCI & layer in AT terminology too.  -->
-
-
-<!-- The templated game was structured to allow changes in code which were relatively easy to perform but which resulted in potentially large changes in game behaviour, appearance and difficulty. This created a large diversity in the games created and in the making activities of participants at this stage despite the small scale of the code changes involved.   -->
-<!-- Thus while I highlighted a limited number key code elements and structures to create affordances to facilitate a quick start, the diversity of experience kept some participants extended periods of time. -->
-
-<!-- Games have been part of human–computer interaction (HCI) research since
-the first CHI conference in 1982. At that gathering, Tom Malone, then at Xerox
-PARC, presented insights from the study of computer games to motivate a set of
-design principles for “enjoyable” user interfaces (Malone, 1982).
-
-from [@bernhaupt_introduction_2015]
- -->
-
-The previous sections have outlined changes to the core tool use including the use of a starter game template which I enacted to address the struggles participants had in becoming accustomed to game making.
-
-Small code changes resulted in potentially large changes in game behaviour, appearance and difficulty aligns with a long standing concept of HCI research that feedback is motivating for system users [@bernhaupt_introduction_2015; @malone_heuristics_1982].  The use of a starting template was inline with core motivations of UMC technique, namely, to build familiarity with the code structure, and confidence in use of tools in an accelerated way.
-
-Despite relative simplicity of the highlighted affordances, complex and divergent patterns of game design emerged. (evidence?)
-
-As explored above, the shift in template design from P1 to P2 involved a more structured approach in for participants in use and modify stages where key affordances were faciliated highlighted in the code design.
-
-This can be seen as a move from a design-build-test to a stepwise approach in the terms broadly explored by Denner et al. [@denner_does_2019].    
-
-As described above, this decision was based on journal observations and participant feedback  
-
-The use of revised in starter template in P2 allowed participants to maintain their games in a mainly working, shareable state allowing regular feedback from peers a process explored in later section and Chapter 7.
-SIGNPOST TO LATER FINDINGS HERE?
-
-The process of modification of the starter template, foregrounding key affordances, together with the restricted tool choice of a code playground and pixel art editor with the authentic, yet scaffolded approach of both tools can be compared to the design decisions made in creating a Microworld environment. DEVELOP THIS WITH LAURILARD AND RESNICKS THEORY.
-
-
-THE IDEA BEING HOW CAN THE IDEAS OF CONSTRUCTIONIST TOOL KITS INTO THIS TOOL SET -
-
-
-    Task-specific programming (TSP) aims to provide the same easy-to-
-    understand operations for a microworld, but with a language and envi-
-    ronment designed for a particular purpose. The task-specific programming
-    language (TSPL) is purposefully limited in the abstractions and concepts
-    needed for the tasks or explorations in the microworld so that program-
-    ming becomes much easier to learn than a complete programming lan-
-    guage.
-    [@kong_providing_2022]
-
-<!-- NOTE - DROP - MAKE MORE DIRECT
-While the scope of this study is not on the micro-level of tool use, it is useful to collate some broad observations from my journal notes and video data on how participants used the new tools introduced. This is done in relation dimensions of complexity exposed in research on educational coding tools. -->
-
-#### Developing Digital Literacy skills
-
-The process of creating a pixel art characters and hazard involved using an online grid design tool called Piskel, creating an design of an appropriate size, saving, exporting as an image, downloading to the hard drive of the laptop in use and finally uploading and incorporating the image into the code project and linking using code syntax.
-
-####  INTEGRAETE ABOVE Tension of a group remixing from one template rather than feeler community inspiration and interaction
-
-To facilitate community inspiration and interaction, rather than engaging with an online community which encourages remixing, collaboration and peer review via comments [ @monroy-hernandez_cooperation_nodate; @cress_supporting_2016], one code base was promoted in order to simplify the process of supporting code errors, and promote peer support, sharing and problem solving due to the use of similar code bases. In journal entries I noted this choice as a tension between, freedom of community inspiration and practicalities of supporting complex coding errors. Sharing of ideas and inspiration did happen both on the playtesting (explored later and more extensively Chapter 7) of each others games and via incidental exposure to the online graphical creations of others via a shared account to Piskel.
-
-#### Concluding bit
-My choices balanced the value of positive engagement of asset creating, development of digital literacy skills associated with web production, and a focus on promoting code modification.  
-
-With the modifications to the template in place, participants still only minimal support to find use the key affordances in to make impactful game changes. Simple card prompts were introduced to do help accelerate the process to facilitate working with large groups. Supporting participants in adding new game features changes was more time consuming, particularly when participants wanted to make modifications to the game requiring additional code structures. My response was to turn to more extensive documentation. The next section explores the role of supporting resources and documentation and resulting contractions that emerged.
-
 
 ### Observations / Discussions on Dimensions of Authenticity - MOVE
 IF THINGS ARE TO STAY IT MUST BE DIRECTLY RELEVANT TO AGENCY
