--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -45,6 +45,9 @@ title: 5. Exploration of the Formative Learning Design Process
             -   [Use of game assets](#use-of-game-assets)
             -   [Distributed approach to asset
                 creation](#distributed-approach-to-asset-creation)
+    -   [C2 - Participant conflict associated with project navigation
+        and use of
+        documentation](#c2---participant-conflict-associated-with-project-navigation-and-use-of-documentation)
         -   [Narrative on the evolution of resources during
             P2](#narrative-on-the-evolution-of-resources-during-p2)
         -   [Quick Start Cards](#quick-start-cards)
@@ -65,6 +68,7 @@ title: 5. Exploration of the Formative Learning Design Process
                 playtesting)](#what-kind-of-maker-are-you---motivations-behind-social-processes-emerging-in-playtesting)
             -   [Use of side missions to encourage varied creative
                 practices](#use-of-side-missions-to-encourage-varied-creative-practices)
+    -   [Chapter Discussion](#chapter-discussion)
         -   [Observations and discussion on the game template and core
             tools](#observations-and-discussion-on-the-game-template-and-core-tools)
             -   [Developing Digital Literacy skills /
@@ -72,15 +76,6 @@ title: 5. Exploration of the Formative Learning Design Process
             -   [Concluding bit](#concluding-bit)
         -   [Outroduction to this part of exploring Drama process and
             playtesting](#outroduction-to-this-part-of-exploring-drama-process-and-playtesting)
-    -   [Chapter Discussion](#chapter-discussion)
-        -   [Observations and discussion on the game template and core
-            tools](#observations-and-discussion-on-the-game-template-and-core-tools-1)
-            -   [Developing Digital Literacy
-                skills](#developing-digital-literacy-skills)
-            -   [INTEGRAETE ABOVE Tension of a group remixing from one
-                template rather than feeler community inspiration and
-                interaction](#integraete-above-tension-of-a-group-remixing-from-one-template-rather-than-feeler-community-inspiration-and-interaction)
-            -   [Concluding bit](#concluding-bit-1)
         -   [Observations / Discussions on Dimensions of Authenticity -
             MOVE](#observations-discussions-on-dimensions-of-authenticity---move)
             -   [The potentially awesome impact of lifting the lid on
@@ -963,6 +958,8 @@ https://drive.google.com/drive/folders/1I8D_axlOUAFIGarrnzGV5mSCe2MDCDso -->
 
 <br />
 
+## Chapter Discussion
+
 ### Observations and discussion on the game template and core tools
 
 **Synthesis effect of UMC + collection of GDPS**
@@ -1043,7 +1040,7 @@ LINKING SECTION HERE PRECEEDING LATER CONCEPTUAL EXPLORATION OF DUAL STIMUATION 
 Evidence of the potential of those on the drama process are explored in chapter 7. In the next section I collate a summary picture of significant barriers experienced and key responses in design to them.
 
 
-## Chapter Discussion
+
 
 
 <!-- As an example the quick start activities created by PGCE students were much more directive than I would have proposed. However, the response of participants still engendered a diversity of experience, from these shared beginnings.The implementation of discreet but potentially shared game elements became a shared pattern of activity. In early stages the mutual work to produce resources, techniques and practices to share and evaluate these shared elements became a primary focus of my work, just as the implementation of game elements was the focus of the work of participants. -->
