--- a/_posts/thesis_chapters/tocs/2024-10-5-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-10-5-Design.md_toc.md
@@ -33,6 +33,9 @@
             -   [Use of game assets](#use-of-game-assets)
             -   [Distributed approach to asset
                 creation](#distributed-approach-to-asset-creation)
+    -   [C2 - Participant conflict associated with project navigation
+        and use of
+        documentation](#c2---participant-conflict-associated-with-project-navigation-and-use-of-documentation)
         -   [Narrative on the evolution of resources during
             P2](#narrative-on-the-evolution-of-resources-during-p2)
         -   [Quick Start Cards](#quick-start-cards)
@@ -53,6 +56,7 @@
                 playtesting)](#what-kind-of-maker-are-you---motivations-behind-social-processes-emerging-in-playtesting)
             -   [Use of side missions to encourage varied creative
                 practices](#use-of-side-missions-to-encourage-varied-creative-practices)
+    -   [Chapter Discussion](#chapter-discussion)
         -   [Observations and discussion on the game template and core
             tools](#observations-and-discussion-on-the-game-template-and-core-tools)
             -   [Developing Digital Literacy skills /
@@ -60,15 +64,6 @@
             -   [Concluding bit](#concluding-bit)
         -   [Outroduction to this part of exploring Drama process and
             playtesting](#outroduction-to-this-part-of-exploring-drama-process-and-playtesting)
-    -   [Chapter Discussion](#chapter-discussion)
-        -   [Observations and discussion on the game template and core
-            tools](#observations-and-discussion-on-the-game-template-and-core-tools-1)
-            -   [Developing Digital Literacy
-                skills](#developing-digital-literacy-skills)
-            -   [INTEGRAETE ABOVE Tension of a group remixing from one
-                template rather than feeler community inspiration and
-                interaction](#integraete-above-tension-of-a-group-remixing-from-one-template-rather-than-feeler-community-inspiration-and-interaction)
-            -   [Concluding bit](#concluding-bit-1)
         -   [Observations / Discussions on Dimensions of Authenticity -
             MOVE](#observations-discussions-on-dimensions-of-authenticity---move)
             -   [The potentially awesome impact of lifting the lid on
