EDITING DOWN CHAP. 5.

--- a/_posts/thesis_chapters/tocs/2024-10-5-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-10-5-Design.md_toc.md
@@ -48,46 +48,38 @@
         the game making
         activity](#c3---responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
         -   [Social coding processes](#social-coding-processes)
-            -   [Playtesting and the interaction with UMC pedagogy and
-                half-baked games
-                approaches](#playtesting-and-the-interaction-with-umc-pedagogy-and-half-baked-games-approaches)
             -   [What kind of Maker are you - Motivations behind social
                 processes (emerging in
                 playtesting)](#what-kind-of-maker-are-you---motivations-behind-social-processes-emerging-in-playtesting)
             -   [Use of side missions to encourage varied creative
                 practices](#use-of-side-missions-to-encourage-varied-creative-practices)
     -   [Chapter Discussion](#chapter-discussion)
-        -   [Observations and discussion on the game template and core
-            tools](#observations-and-discussion-on-the-game-template-and-core-tools)
-            -   [Developing Digital Literacy skills /
-                Fluency](#developing-digital-literacy-skills-fluency)
-            -   [Concluding bit](#concluding-bit)
-        -   [Outroduction to this part of exploring Drama process and
-            playtesting](#outroduction-to-this-part-of-exploring-drama-process-and-playtesting)
-        -   [Observations / Discussions on Dimensions of Authenticity -
-            MOVE](#observations-discussions-on-dimensions-of-authenticity---move)
+        -   [Summary of evolution of learning design tools and
+            processes](#summary-of-evolution-of-learning-design-tools-and-processes)
+        -   [Discussion: locating the ethos of game template and core
+            tools with other
+            research](#discussion-locating-the-ethos-of-game-template-and-core-tools-with-other-research)
+        -   [Authenticity and Agency in tool
+            used](#authenticity-and-agency-in-tool-used)
+            -   [Increased scaffolding of tools can increase
+                instrumental agency but at what
+                cost?](#increased-scaffolding-of-tools-can-increase-instrumental-agency-but-at-what-cost)
             -   [The potentially awesome impact of lifting the lid on
                 authentic
                 technologies](#the-potentially-awesome-impact-of-lifting-the-lid-on-authentic-technologies)
-        -   [Discussion on scaffolding, affordences and
-            agency](#discussion-on-scaffolding-affordences-and-agency)
-            -   [Increased scaffolding of tools can increase
-                instrumental agency but at what cost? REDUCE THIS DOWN A
-                LOT - OR
-                DROP](#increased-scaffolding-of-tools-can-increase-instrumental-agency-but-at-what-cost-reduce-this-down-a-lot---or-drop)
+            -   [Remixing, peer learning, and choice of starting
+                template](#remixing-peer-learning-and-choice-of-starting-template)
+        -   [Expressing the key features of this design narrative using
+            the argumentative grammar of
+            3GAT](#expressing-the-key-features-of-this-design-narrative-using-the-argumentative-grammar-of-3gat)
+        -   [Link to next chapter](#link-to-next-chapter)
             -   [Returning to discussion the emergent and mutual nature
                 of the design and what it has to say about participant
                 agency](#returning-to-discussion-the-emergent-and-mutual-nature-of-the-design-and-what-it-has-to-say-about-participant-agency)
-            -   [SOMETHING ABOUT The goal of computational fluency in
-                relation to the research
-                question.](#something-about-the-goal-of-computational-fluency-in-relation-to-the-research-question.)
-            -   [DBR / FI implications, Design narrative argumentative
-                grammar,
-                etc](#dbr-fi-implications-design-narrative-argumentative-grammar-etc)
+    -   [Parking Lot](#parking-lot)
+        -   [Developing Digital Literacy skills / Fluency -
+            OPERATIONS](#developing-digital-literacy-skills-fluency---operations)
+        -   [Tensions in tool use emerging between agency and
+            authenticity](#tensions-in-tool-use-emerging-between-agency-and-authenticity)
         -   [Summary of barriers and tensions explored in this
             chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
-            -   [Exploring tensions involving and authentic tool
-                use](#exploring-tensions-involving-and-authentic-tool-use)
-        -   [Emergence of GDPs as a germ cell of
-            activity](#emergence-of-gdps-as-a-germ-cell-of-activity)
-        -   [Link to next chapter](#link-to-next-chapter)
