quick edit of first section

--- a/_posts/thesis_chapters/tocs/2024-10-5-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-10-5-Design.md_toc.md
@@ -3,15 +3,10 @@
     -   [Research Questions - April
         2024](#research-questions---april-2024)
     -   [Chapter Introduction](#chapter-introduction)
-    -   [Analysis of dimensions of game making activity using 3GAT
-        framework](#analysis-of-dimensions-of-game-making-activity-using-3gat-framework)
-        -   [Environmental factors and
-            objectives](#environmental-factors-and-objectives)
-        -   [Activity system 1 - an emerging community of novice game
-            makers community making games as a learning
-            experience](#activity-system-1---an-emerging-community-of-novice-game-makers-community-making-games-as-a-learning-experience)
-        -   [Activity system 2 - Constructing a game feature by
-            feature](#activity-system-2---constructing-a-game-feature-by-feature)
+    -   [Vignette and broad analysis using an analysis of activity
+        systems](#vignette-and-broad-analysis-using-an-analysis-of-activity-systems)
+        -   [Context of vignette](#context-of-vignette)
+        -   [Vignette summary](#vignette-summary)
             -   [LINK - Applying activity theory to surface
                 contradictions and design tensions experienced by
                 participants and
@@ -83,3 +78,8 @@
             authenticity](#tensions-in-tool-use-emerging-between-agency-and-authenticity)
         -   [Summary of barriers and tensions explored in this
             chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
+    -   [Parked from the first
+        section.](#parked-from-the-first-section.)
+        -   [Shared object as GDP move to Ch
+            5](#shared-object-as-gdp-move-to-ch-5)
+        -   [Perhaps reintegrate above](#perhaps-reintegrate-above)
