--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -15,15 +15,10 @@ title: 5. Exploration of the Formative Learning Design Process
     -   [Research Questions - April
         2024](#research-questions---april-2024)
     -   [Chapter Introduction](#chapter-introduction)
-    -   [Analysis of dimensions of game making activity using 3GAT
-        framework](#analysis-of-dimensions-of-game-making-activity-using-3gat-framework)
-        -   [Environmental factors and
-            objectives](#environmental-factors-and-objectives)
-        -   [Activity system 1 - an emerging community of novice game
-            makers community making games as a learning
-            experience](#activity-system-1---an-emerging-community-of-novice-game-makers-community-making-games-as-a-learning-experience)
-        -   [Activity system 2 - Constructing a game feature by
-            feature](#activity-system-2---constructing-a-game-feature-by-feature)
+    -   [Vignette and broad analysis using an analysis of activity
+        systems](#vignette-and-broad-analysis-using-an-analysis-of-activity-systems)
+        -   [Context of vignette](#context-of-vignette)
+        -   [Vignette summary](#vignette-summary)
             -   [LINK - Applying activity theory to surface
                 contradictions and design tensions experienced by
                 participants and
@@ -95,6 +90,12 @@ title: 5. Exploration of the Formative Learning Design Process
             authenticity](#tensions-in-tool-use-emerging-between-agency-and-authenticity)
         -   [Summary of barriers and tensions explored in this
             chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
+    -   [Parked from the first
+        section.](#parked-from-the-first-section.)
+        -   [Shared object as GDP move to Ch
+            5](#shared-object-as-gdp-move-to-ch-5)
+        -   [Perhaps reintegrate above](#perhaps-reintegrate-above)
+
 
 # Exploration of the Formative Learning Design Process
 
@@ -130,26 +131,24 @@ In the previous chapter, I described phases of delivery of the formative interve
 To begin this chapter I describe activity by identifying activity units/systems, system elements typical at early phases of the design, with a particular focus on the transformations happening in the object of the activity systems.
 
 
-
-
 This narrative is enriched by more in-depth analysis of three key areas of emerging areas of contradictions in activity and resultant interventions which addressed those contradictions. The three main areas of contradictions are explored in this chapter are as follows: in use of software tool use in P1 and P2, those associated with project navigation and the use of supporting documentation in P2, and finally contradictions surrounding participant identity within the game making activity.
-
 
 The discussion section of this chapter includes a synthesis of key initial barriers to engaging this game making program and the resultant responses. A final section identifies game design patterns (GDPs) as a "germ cell" concept that emerged in several forms in the evolution of the learning design.
 
+## Vignette and broad analysis using an analysis of activity systems
+
+This section begins analysis of the learning intervention by elements of a typical activity system. To do this a summary of a vignette of illustative activity is intertwined with systems elements to illustrate some of the key features of the overall game making activity in relation to activity systems and relevant system elements.
+
+The full vignette is included as an appendix of this chapter as Appendix 4.t
+
+<!--
+[Link to online version here](https://docs.google.com/document/d/1vYeVxYaRMTWPDOHwC4DEGYAkGPRIDX7wLiz0l8b7LWc/edit)) -->
 
 
+### Context of vignette
 
-## Analysis of dimensions of game making activity using 3GAT framework
 
-In line with the process outlined in chapter three, the following sections outline different scopes of activity to introduce tensions between system elements which are explored in this chapter.
-
-### Environmental factors and objectives
-
-<!-- The following descriptions mirror the work of AT researchers who conceptualise scope of activity as concentric circles from Broffennbrenner with "larger" scopes of cultural and societal goals and smaller, narrower, lower scopes of more personal activity [Engestrom][Cole]. -->
-
-The context of the learning environment situated within wider systems of activity. Three key systems are represented in an illustration 4.x  below. The diagram is necessary simplification of contextual factors and objectives of interacting, focusing on research goals on the part of the researcher, learning computing skills and concepts as a home education project and finally a broad aim of fun on the part of the children participants. Diverse cultural and contextual factors from the original activity systems are played out in a new shared activity system, while there is a nominal shared objective to the main activity, it the community contains diverse actors with different agendas.
-
+The context of the learning environment situated within wider systems of activity. Three key systems are represented in an illustration 4.x  below. The diagram is necessary simplification of contextual factors and objectives of interacting, focusing on research goals on the part of the researcher, learning computing skills and concepts as a home education project and finally a broad aim of fun on the part of the children participants.
 
 <!--
 Other relevant objectives of re include: a desire to create a useful learning experience on the part of student helpers; participating with other home educators in a creative environment and thus building team and communication skills;. -->
@@ -159,36 +158,29 @@ Other relevant objectives of re include: a desire to create a useful learning ex
 
 ![Illustration 4.x - Broad Environmental Activity Systems  ](./Pictures/At_dia_3_v2.png){width=95%}
 
-The diagram is in line with Engestrom's concept of expansive learning via a shared object (explored in the chapter three) [@engestrom_expansive_2001]. In this research, I take the approach of treating this shared object as an activity system in its own right. Lecusay [@lecusay_telementoring_2015] applies a similar approach when describing an adaption to an after school program. He describes the shared object as an idiocultural hybrid which develops into its own activity system.
-DEVELOP
-<!-- NOTE - WHY IS THE CONCEPT OF IDEOCULTURE USEFUL HERE? -->
+IS THIS NEEDED?
+Diverse cultural and contextual factors from the original activity systems are played out in a new shared activity system, while there is a nominal shared objective to the main activity, it the community contains diverse actors with different agendas.
 
 <!-- The concept of idioculture is used in this study to deepen the description of the community dimension of 3GAT. -->
-
-MOVE THIS PART TO CHAPTER 3?
-
-Following Barab's description of nested activity systems [-@barab_using_2002], this shared system, whose objective is to make a games for an audience to play,  can be seen not only as nested within the wider systems but also as a container for  other  activity systems nested with that. While this overall approach is considered valid [FIND OTHER SUPPORT], the danger of fragmenting activity to much is to make matters confusing. The job of the researcher is to prioritise systems to describe and analyse based on the area of study and the concerns of the participants.
-
-This prioritisation in AT is sometimes conceptualised as the process of finding a key units of analysis. In the process of research I have found two units of activity particularly illuminating, one being the shared activity system described above of making a game in a community process. The other, narrower in scope can be described as implementing individual game features.
-
-Beyond these key systems, I draw on the concepts of actions and operations within systems to describe tensions and contradictions which emerge in the research process [-@leontiev_activity_2009].
-
-OPERATIONS WHERE?
-
 <!-- GDPs ( conceptualised here as game design patterns), which while often implemented on an individual or pair scope, were also fed back into community activity.  -->
 
-###  Activity system 1 - an emerging community of novice game makers community making games as a learning experience
+### Vignette summary
+NOTE - WHAT IS NEEDED Here?
+THINK CLARIFY TERMS OF SUBJECT, COMMUNITY AND OBJECT /OBJECTIVE
+THINK ALSO DESIGN ARGUMENATION
 
-<!-- NOTE - Get into difference between object / objective and outcomes -->
+The participant, a child Toby, has been working independently on the design of a platform game for several minutes of the session. As a facilitator, I draw the participants attention to the showcasing of their games to an external audience to focus their attention on completion of their games. Toby pays close attention to the challenge and variety of the game playing experience for his imagined audience of players. During the course of the session Toby invites many other group members to play his game. He initiates and responds to conversations around the difficultly of the game he has designed. The more immediate audience of his peers is clearly important to him in guiding his actions. This objective is a part of the wider of the two acitivity systems outlined in this section.
 
-<!-- While the limited example above of Toby's activity illustrates fun, additional data from interviews with this child and family back the broad goals above. [develop - perhaps an appendix or quotes] -->
 
-<!-- As previously explored this mirrors the Activity, Action and Operation hierarchy. -->
+
+![Illustration 4.x - Larger game making activity system  ](./Pictures/At_dia_1_v3.png){width=95%}
+
+Fig 4.1 : Activity system 1 - an emerging community of novice game makers community making games as a learning experience
 
 
 This scope of activity takes as a subject the community of individuals in the room as during the game making sessions. this includes parents, children, student helpers and myself as a researcher / facilitator. As explored in Chapter 3 and 4 the object of the activity shifted in early stages in P1 and P2, as the community at times needed to shift attention not only the construction of a game but also to the evolving group process and pedagogy to enable successful completion of the game coding project(s).
 
-![Illustration 4.x - Larger game making activity system  ](./Pictures/At_dia_1_v3.png){width=95%}
+
 
 <!-- IS THIS RELEVANT HERE? -->
 The real or perceived audience of the completed games is relevant when considering the motivating objectives of participants at this level of activity. The explicit  target audience were students and staff in the Manchester Met Brooks building at a final showcase event where the created games were shared in arcade cabinets. An additional audience are friends and family who can be send the games to play online. However, a more immediate and tangible audience for the evolving games were peer game makers and facilitators during the making sessions.
@@ -204,8 +196,19 @@ While the object of making a game to share using the suggested tools is tacitly 
 <!--
 NOTE - More on large scope in AT terms? What is needed here? -->
 
+**Returning to the specifics of the vignette...**
 
-### Activity system 2 -  Constructing a game feature by feature
+Toby uses a variety of tools in the process of coding and testing his game including: a web based coding tool (code playground), a game template which he has used as the base of his game project and,  a menu of documentation linking to code examples and tutorials.
+
+
+By this stage of the process, Toby is able to browse a collection of game design patterns and use diverse of tools, resources and processes. Participants developed preferred approaches and tool choices especially in accessing help when adding a new feature to their game.
+
+In the vignette 5.T I outline the two main sources of help at the level of adding a new feature to the game: "Here’s the tutorial and there’s the examples of code". In the course of the vignette above, Toby chose to access only a code example of the desired game behaviour. He did not, as some in the group were doing in this session, use the tutorial which provided more descriptive, step-by-step guidance. Other participants relied only on direct verbal help from myself or other participants (like Toby) to help them progress.
+
+
+![Mid-level activity system of game making](./Pictures/At_dia_2_v1.png){width=95%}
+
+Fig 5.2 Activity system 2 -  Constructing a game feature by feature
 
 This scope of activity takes an individual or parent/child paring as its subject.
 
@@ -217,7 +220,6 @@ While is it possible, aligning with Levontev, to identify the implementation of 
 QUOTE?
 
 
-![Mid-level activity system of game making](./Pictures/At_dia_2_v1.png){width=95%}
 
 <!-- One observation from he experimental course was that without signific
 
@@ -225,55 +227,47 @@ QUOTE?
 
 ant support, the process of making a game is complex and there are many possible blockages in the process. -->
 
+**on operations / fluidity? Move?**
 
-
-
-**Illustrative vignette on participants activity indicating general activity of participants**
-
-The purpose of this vignette is to illustrate some of the key features of the overall game making activity in relation to activity systems and relevant system elements. (included as an appendix of this chapter as Appendix 4.a -
-
-<!--
-[Link to online version here](https://docs.google.com/document/d/1vYeVxYaRMTWPDOHwC4DEGYAkGPRIDX7wLiz0l8b7LWc/edit)) -->
-
-The participant, a child Toby, has been working independently on the design of a platform game for several minutes of the session. As a facilitator, I draw the participants attention to the showcasing of their games to an external audience to focus their attention on completion of their games. Toby pays close attention to the challenge and variety of the game playing experience for his imagined audience of players. During the course of the session Toby invites many other group members to play his game. He initiates and responds to conversations around the difficultly of the game he has designed. The more immediate audience of his peers is clearly important to him in guiding his actions.
-
-He uses a variety of tools in the process of coding and testing his game including: a web based coding tool (code playground), a game template which he has used as the base of his game project and,  a menu of documentation linking to code examples and tutorials   
-
-By this stage of the process, Toby is able to browse a collection of game design patterns and use diverse of tools, resources and processes. Participants developed preferred approaches and tool choices especially in accessing help when adding a new feature to their game.
-
-In the vignette 5.T I outline the two main sources of help at the level of adding a new feature to the game: "Here’s the tutorial and there’s the examples of code". In the course of the vignette above, Toby chose to access only a code example of the desired game behaviour. He did not, as some in the group were doing in this session, use the tutorial which provided more descriptive, step-by-step guidance. Other participants relied only on direct verbal help from myself or other participants (like Toby) to help them progress.
 
 While this vignette shows that the participant has developed fluid use of both software tools and documentation and support sources, these are areas where significant contradictions emerged which shaped the path of the support given.
+OPERATIONS - WHERE? MOVE
 
-OPERATIONS - WHERE?
 Within the objective of adding or altering game features (also referred to as game design patterns here), implementing more complicated patterns involved several stages and varied tools. Using the terminology of Leontiev [-@leontiev_activity_2009], participants undertakes certain chains of processes in a fluid way that shows that actions had become operations (as explored in chapter three). In vignette 4.x, an example of such an operation is Toby's quick navigation between different areas of the game code, the game preview window and other sources of documentation. In contrast, some tasks are new to Toby and are performed more hesitantly. In the vignette's description, it can be observed that at times Toby is careful and hesitant, checking and rechecking the process of copying and pasting new code into his game from the code example of a design pattern he has chosen.
 
-<!-- Contradictions concerned with use of core tools and additional documentation and support are explored in two later sections of this chapter. -->
+<!-- Contradictions conce
+rned with use of core tools and additional documentation and support are explored in two later sections of this chapter. -->
+
+**idioculture elements move?**
 
 The later section of the vignette shows evidence of elements of an emerging idioculture of this group.
 
-<!-- MOVE THIS TO CHAPTER 7 -
-A student helper shares a question -  "Is yours the one where level one is harder than level three?". This is indicative of some of the emerging playful approaches that younger participants in particular are taking to the overall process. This represents an example of the influence of the wider systems of play of on the shared idioculture of the game making community. The complexities of processes to create and to help resolve contradictions as this cultural domain of collective making are explored later in this chapter. -->
-
-Game design patterns emerged as a shared object as described by Engestrom in []. The object of activity here is not only the code and game assets which participants are working on. In addition the emerging concept and group understanding of the game design pattern becomes a share understanding on a community level as playtesing, pair work and peer help happens.
-
-![Illustration 4.x - Shared object of implementing GDP  ](./Pictures/At_dia_4_v1.png){width=95%}
-
-Chapter five contains more detail on the emergence of game design patterns as shared concepts and the implications for activity in more depth.
 
 <!-- DEVELOP THIS IDEA HERE OR MOVE IT TO DISCUSSION WITH SOME KIND OF SIGNPOSTING HERE. -->
 
 Objectives at this level also vary between participants with some more straight-forward and others more tricky based on their making style. For example, beyond a purely utilitarian objective, a further objective in implementing a GDP, e.g. a new graphical element may be to increase a sense of personal identification with the game as an vehicle for personal expression.  
 
 
-
-
-<!-- In the last chapter, we examined the use of Rogoff's 3 lenses of cultural, social and personal activity. We can see a broad alignment of these lenses and the scopes of the activity systems above.
+<!-- In the last chapter, we examined the use of Rogoff's 3 lenses of cultural, social and personal activity. We can see a broaChapter five contains more detail on the emergence of game design patterns as shared concepts and the implications for activity in more depth.
+d alignment of these lenses and the scopes of the activity systems above.
 
 NOTE - Explore how performed in line with other research - e.g. DBR (Barab) and possibly Bevan and Petrich -->
 
 <!-- to highlight possible tensions and contradictions between competing goals of interrelated activity systems. -->
 
+
+<!-- In line with the process outlined in chapter three, the following sections outline different scopes of activity to introduce tensions between system elements which are explored in this chapter. -->
+
+
+
+<!-- The following descriptions mirror the work of AT researchers who conceptualise scope of activity as concentric circles from Broffennbrenner with "larger" scopes of cultural and societal goals and smaller, narrower, lower scopes of more personal activity [Engestrom][Cole]. -->
+
+
+<!-- NOTE - Get into difference between object / objective and outcomes -->
+
+<!-- While the limited example above of Toby's activity illustrates fun, additional data from interviews with this child and family back the broad goals above. [develop - perhaps an appendix or quotes] -->
+
+<!-- As previously explored this mirrors the Activity, Action and Operation hierarchy. -->
 
 
 
@@ -1191,3 +1185,40 @@ There's a tension of not wanting to jump in to teach CT concepts, or to force re
 Here I worked to remove barriers to accessing CT as a framework   via resource creation which aligned to experience. But their agency is expressed through disinterest and reluctance in participation. This transform conceptions of the activity as I give up CT as a framework which guides the objective. Instead using GDPS as one more aligned with their interests and need to develop fluency in non-conceptual coding practices.
 
 Also, the drama frame was able to address of of the tensions which emerge - but these are mention only in summary here as they are explored in more depth in discussion in chater six.
+
+## Parked from the first section.
+
+
+![Illustration 4.x - Broad Environmental Activity Systems  ](./Pictures/At_dia_3_v2.png){width=95%}
+
+
+
+
+The diagram is in line with Engestrom's concept of expansive learning via a shared object (explored in the chapter three) [@engestrom_expansive_2001]. In this research, I take the approach of treating this shared object as an activity system in its own right. Lecusay [@lecusay_telementoring_2015] applies a similar approach when describing an adaption to an after school program. He describes the shared object as an idiocultural hybrid which develops into its own activity system.
+DEVELOP
+
+
+
+### Shared object as GDP move to Ch 5
+
+Chapter five contains more detail on the emergence of game design patterns as shared concepts and the implications for activity in more depth.
+
+
+
+Game design patterns emerged as a shared object as described by Engestrom in []. The object of activity here is not only the code and game assets which participants are working on. In addition the emerging concept and group understanding of the game design pattern becomes a share understanding on a community level as playtesing, pair work and peer help happens.
+
+![Illustration 4.x - Shared object of implementing GDP  ](./Pictures/At_dia_4_v1.png){width=95%}
+
+### Perhaps reintegrate above
+
+MOVE THIS PART TO CHAPTER 3?
+
+Following Barab's description of nested activity systems [-@barab_using_2002], this shared system, whose objective is to make a games for an audience to play,  can be seen not only as nested within the wider systems but also as a container for  other  activity systems nested with that. While this overall approach is considered valid [FIND OTHER SUPPORT], the danger of fragmenting activity to much is to make matters confusing. The job of the researcher is to prioritise systems to describe and analyse based on the area of study and the concerns of the participants.
+
+This prioritisation in AT is sometimes conceptualised as the process of finding a key units of analysis. In the process of research I have found two units of activity particularly illuminating, one being the shared activity system described above of making a game in a community process. The other, narrower in scope can be described as implementing individual game features.
+
+Beyond these key systems, I draw on the concepts of actions and operations within systems to describe tensions and contradictions which emerge in the research process [-@leontiev_activity_2009].
+
+
+MOVE THIS TO CHAPTER 7 -
+A student helper shares a question -  "Is yours the one where level one is harder than level three?". This is indicative of some of the emerging playful approaches that younger participants in particular are taking to the overall process. This represents an example of the influence of the wider systems of play of on the shared idioculture of the game making community. The complexities of processes to create and to help resolve contradictions as this cultural domain of collective making are explored later in this chapter.
